@@ -90,7 +90,9 @@ public class MapProperty<K, V extends Persistent> extends BaseProperty<Map<K, V>
 
     /**
      * @return An expression for finding objects with values in the given set.
+     * @deprecated since 5.0 in favour of {@link #containsValues(V...)}
      */
+    @Deprecated(since = "5.0", forRemoval = true)
     @SafeVarargs
     public final Expression contains(V firstValue, V... moreValues) {
 
@@ -108,21 +110,52 @@ public class MapProperty<K, V extends Persistent> extends BaseProperty<Map<K, V>
 
     /**
      * @return An expression for finding objects with values in the given set.
+     * @since 5.0
      */
+    @SafeVarargs
+    public final Expression containsValues(V... values) {
+        return ExpressionFactory.inExp(getExpression(), (Object[])values);
+    }
+
+    /**
+     * @return An expression for finding objects with values in the given set.
+     * @deprecated since 5.0 in favour of {@link #containsValuesCollection(Collection)}
+     */
+    @Deprecated(since = "5.0", forRemoval = true)
     public Expression contains(Collection<V> values) {
         return ExpressionFactory.inExp(getExpression(), values);
     }
 
     /**
-     * @return An expression for finding objects with values not in the given set.
+     * @return An expression for finding objects with values in the given set.
+     * @since 5.0
      */
+    public Expression containsValuesCollection(Collection<V> values) {
+        return ExpressionFactory.inExp(getExpression(), values);
+    }
+
+    /**
+     * @return An expression for finding objects with values not in the given set.
+     * @deprecated since 5.0 in favour of {@link #notContainsValuesCollection(Collection)}
+     */
+    @Deprecated(since = "5.0", forRemoval = true)
     public Expression notContains(Collection<V> values) {
         return ExpressionFactory.notInExp(getExpression(), values);
     }
 
     /**
-     * @return An expression for finding objects with values not in the given set.
+     * @return An expression for finding objects with values in the given set.
+     * @since 5.0
      */
+    public Expression notContainsValuesCollection(Collection<V> values) {
+        return ExpressionFactory.inExp(getExpression(), values);
+    }
+
+    /**
+     * @return An expression for finding objects with values not in the given set.
+     * @deprecated since 5.0 in favour of {@link #notContainsValues(V...)}
+     */
+    @Deprecated(since = "5.0", forRemoval = true)
     @SafeVarargs
     public final Expression notContains(V firstValue, V... moreValues) {
 
@@ -139,6 +172,15 @@ public class MapProperty<K, V extends Persistent> extends BaseProperty<Map<K, V>
     }
 
     /**
+     * @return An expression for finding objects with values not in the given set.
+     * @since 5.0
+     */
+    @SafeVarargs
+    public final Expression notContainsValues(V... values) {
+        return ExpressionFactory.notInExp(getExpression(), (Object[])values);
+    }
+
+    /**
      * @param id object id
      * @return An expression for finding object with given id.
      */
@@ -148,7 +190,9 @@ public class MapProperty<K, V extends Persistent> extends BaseProperty<Map<K, V>
 
     /**
      * @return An expression for finding objects with given id set
+     * @deprecated since 5.0 in favour of {@link #containsIds(Object...)}
      */
+    @Deprecated(since = "5.0", forRemoval = true)
     public Expression containsId(Object firstId, Object... moreId) {
 
         int moreValuesLength = moreId != null ? moreId.length : 0;
@@ -164,11 +208,30 @@ public class MapProperty<K, V extends Persistent> extends BaseProperty<Map<K, V>
     }
 
     /**
-     * @return An expression for finding objects with given id set.
+     * @return An expression for finding objects with given id set
+     * @since 5.0
      */
+    public Expression containsIds(Object... ids) {
+        return ExpressionFactory.inExp(getExpression(), ids);
+    }
+
+    /**
+     * @return An expression for finding objects with given id set.
+     * @deprecated since 5.0 in favour of {@link #containsIdsCollection(Collection)}
+     */
+    @Deprecated(since = "5.0", forRemoval = true)
     public Expression containsId(Collection<Object> ids) {
         return ExpressionFactory.inExp(getExpression(), ids);
     }
+
+    /**
+     * @return An expression for finding objects with given id set.
+     * @since 5.0
+     */
+    public Expression containsIdsCollection(Collection<?> ids) {
+        return ExpressionFactory.inExp(getExpression(), ids);
+    }
+
 
     /**
      * @param id object id
@@ -180,7 +243,9 @@ public class MapProperty<K, V extends Persistent> extends BaseProperty<Map<K, V>
 
     /**
      * @return An expression for finding objects without given id set.
+     * @deprecated since 5.0 in favour of {@link #notContainsIds(Object...)}
      */
+    @Deprecated(since = "5.0", forRemoval = true)
     public Expression notContainsId(Object firstId, Object... moreId) {
 
         int moreValuesLength = moreId != null ? moreId.length : 0;
@@ -197,8 +262,26 @@ public class MapProperty<K, V extends Persistent> extends BaseProperty<Map<K, V>
 
     /**
      * @return An expression for finding objects without given id set.
+     * @since 5.0
      */
+    public Expression notContainsIds(Object... ids) {
+        return ExpressionFactory.notInExp(getExpression(), ids);
+    }
+
+    /**
+     * @return An expression for finding objects without given id set.
+     * @deprecated since 5.0 in favour of {@link #notContainsIdsCollection(Collection)}
+     */
+    @Deprecated(since = "5.0", forRemoval = true)
     public Expression notContainsId(Collection<Object> ids) {
+        return ExpressionFactory.notInExp(getExpression(), ids);
+    }
+
+    /**
+     * @return An expression for finding objects without given id set.
+     * @since 5.0
+     */
+    public Expression notContainsIdsCollection(Collection<?> ids) {
         return ExpressionFactory.notInExp(getExpression(), ids);
     }
 
